RESOLVED FIXED245508
[LBSE] Fix transform support for SVG <text> elements
https://bugs.webkit.org/show_bug.cgi?id=245508
Summary [LBSE] Fix transform support for SVG <text> elements
Nikolas Zimmermann
Reported 2022-09-21 16:19:22 PDT
Transforms is ignored for LBSE + <text>, currently breaking dozens of tests, see wk2-lbse-text/TestExpectations. Fix is in the pipeline.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-28 16:20:52 PDT
Nikolas Zimmermann
Comment 2 2022-10-19 04:18:18 PDT
EWS
Comment 3 2022-10-20 14:07:22 PDT
Committed 255801@main (0c33f22a764e): <https://commits.webkit.org/255801@main> Reviewed commits have been landed. Closing PR #5534 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.